--- a/styles/style.css
+++ b/styles/style.css
@@ -69,6 +69,52 @@ header #header__container .account__menu {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+header #header__container .account__menu .btn_log {
+  background: transparent;
+  color: #31312f;
+  border: 1px solid #31312f;
+  padding: 10px;
+  border-radius: 5px;
+  text-transform: uppercase;
+  font-weight: 900;
+  -webkit-transition-duration: 0.4s;
+          transition-duration: 0.4s;
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+header #header__container .account__menu .btn_log:hover {
+  background: #CD8987;
+  border: 1px solid #CD8987;
+  color: #fff;
+}
+
+header #header__container .account__menu .menu__trolley {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 20px;
+}
+
+header #header__container .account__menu .menu__trolley img {
+  width: 35px;
+  margin-right: 10px;
 }
 
 header #header__container .account__menu .dropdown__btn {
@@ -189,7 +235,7 @@ nav #nav-container #menu .menu-element .dropdown__menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  visibility: hidden;
+  visibility: hidde;
   opacity: 0;
   text-align: left;
   position: absolute;
@@ -288,7 +334,7 @@ section {
   padding-bottom: 30px;
 }
 
-section #section-container {
+section .section-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -303,7 +349,7 @@ section #section-container {
   width: 100vw;
 }
 
-section #section-container .slider__container {
+section .section-container .slider__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -313,7 +359,7 @@ section #section-container .slider__container {
   position: relative;
 }
 
-section #section-container .slider__container .slider__button {
+section .section-container .slider__container .slider__button {
   outline: 0;
   cursor: pointer;
   width: 50px;
@@ -327,11 +373,11 @@ section #section-container .slider__container .slider__button {
           transition-duration: 0.4s;
 }
 
-section #section-container .slider__container .slider__button:hover {
+section .section-container .slider__container .slider__button:hover {
   opacity: .4;
 }
 
-section #section-container .slider__container .slider__button::before {
+section .section-container .slider__container .slider__button::before {
   content: '';
   position: absolute;
   left: 0;
@@ -343,25 +389,25 @@ section #section-container .slider__container .slider__button::before {
   width: 20px;
 }
 
-section #section-container .slider__container .slider__button--prev {
+section .section-container .slider__container .slider__button--prev {
   left: 0;
 }
 
-section #section-container .slider__container .slider__button--prev::before {
+section .section-container .slider__container .slider__button--prev::before {
   -webkit-transform: translate(90%, 75%) rotate(-45deg);
           transform: translate(90%, 75%) rotate(-45deg);
 }
 
-section #section-container .slider__container .slider__button--next {
+section .section-container .slider__container .slider__button--next {
   right: 0;
 }
 
-section #section-container .slider__container .slider__button--next::before {
+section .section-container .slider__container .slider__button--next::before {
   -webkit-transform: translate(50%, 75%) rotate(135deg);
           transform: translate(50%, 75%) rotate(135deg);
 }
 
-section #section-container #section-container-content {
+section .section-container #section-container-content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -372,7 +418,7 @@ section #section-container #section-container-content {
   width: 100%;
 }
 
-section #section-container #section-container-content .section-container-content-element {
+section .section-container #section-container-content .section-container-content-element {
   width: 350px;
   height: 300px;
   background: #fff;
@@ -388,7 +434,7 @@ section #section-container #section-container-content .section-container-content
   box-shadow: 0px 0px 5px 1px rgba(49, 49, 47, 0.15);
 }
 
-section #section-container #section-container-content .section-container-content-element button {
+section .section-container #section-container-content .section-container-content-element button {
   background: transparent;
   color: #31312f;
   border: 1px solid #31312f;
@@ -401,20 +447,20 @@ section #section-container #section-container-content .section-container-content
   cursor: pointer;
 }
 
-section #section-container #section-container-content .section-container-content-element button:hover {
+section .section-container #section-container-content .section-container-content-element button:hover {
   background: #CD8987;
   border: 1px solid #CD8987;
   color: #fff;
 }
 
-section #section-container #section-container-content .section-container-content-element .section-container-content-element-img {
+section .section-container #section-container-content .section-container-content-element .section-container-content-element-img {
   -ms-flex-item-align: start;
       align-self: flex-start;
   width: 80px;
   height: auto;
 }
 
-section #section-container #section-container-content .section-container-content-element .section-container-content-element-text {
+section .section-container #section-container-content .section-container-content-element .section-container-content-element-text {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -428,11 +474,11 @@ section #section-container #section-container-content .section-container-content
   margin-left: 20px;
 }
 
-section #section-container #section-container-content .section-container-content-element .section-container-content-element-text h2 {
+section .section-container #section-container-content .section-container-content-element .section-container-content-element-text h2 {
   text-transform: uppercase;
 }
 
-section #section-container #section-container-content .section-container-content-element .section-container-content-element-text p {
+section .section-container #section-container-content .section-container-content-element .section-container-content-element-text p {
   font-size: 13px;
   -ms-flex-item-align: baseline !important;
       align-self: baseline !important;
@@ -589,5 +635,109 @@ footer #footer-container #footer-container-info .footer-container-info-element u
 
 #signin .main__container .container__right a:hover {
   color: #CD8987;
+}
+
+main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #f5f5f5;
+}
+
+main .main__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  max-width: 1140px;
+  width: 100vw;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+main .main__container aside {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 285px;
+}
+
+main .main__container aside h3 {
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+
+main .main__container aside a {
+  color: #31312f;
+  margin-bottom: 10px;
+  text-decoration: none;
+}
+
+main .main__container .section__shop {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 855px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-top: 0;
+}
+
+main .main__container .section__shop .shop__options {
+  margin-left: 30px;
+  margin-bottom: 30px;
+}
+
+main .main__container .section__shop .shop__products {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+main .main__container .section__shop .shop__products .shop__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 245px;
+  -webkit-box-shadow: 0px 0px 5px 1px rgba(49, 49, 47, 0.15);
+  box-shadow: 0px 0px 5px 1px rgba(49, 49, 47, 0.15);
+  margin-left: 30px;
+  margin-bottom: 30px;
+  padding: 10px;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+main .main__container .section__shop .shop__products .shop__item img {
+  width: 200px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin-bottom: 10px;
+}
+
+main .main__container .section__shop .shop__products .shop__item:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 /*# sourceMappingURL=style.css.map */
