--- a/styles/style.scss
+++ b/styles/style.scss
@@ -33,6 +33,35 @@ header {
         }
         .account__menu {
             justify-content: flex-end;
+            display: flex;
+            flex-direction: row;
+            .btn_log {
+                background: transparent;
+                color: $dark-grey;
+                border: 1px solid $dark-grey;
+                padding: 10px;
+                border-radius: 5px;
+                text-transform: uppercase;
+                font-weight: 900;
+                transition-duration: 0.4s;
+                cursor: pointer;
+                margin-left: 10px;
+            }
+            .btn_log:hover {
+                background: $pink;
+                border: 1px solid $pink;
+                color: $white
+            }
+            .menu__trolley {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                margin-right: 20px;
+                img {
+                    width: 35px;
+                    margin-right: 10px;
+                }
+            }
             .dropdown__btn {
                 width: 50px;
                 cursor: pointer;
@@ -109,7 +138,7 @@ nav {
                 }
                 .dropdown__menu {
                     display: flex;
-                    visibility: hidden;
+                    visibility: hidde;
                     opacity: 0;
                     text-align: left;
                     position: absolute;
@@ -181,7 +210,7 @@ section {
     background-color: $light-grey;
     padding-top: 30px;
     padding-bottom: 30px;  
-    #section-container {
+    .section-container {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -363,6 +392,70 @@ footer {
             a:hover {
                 color: $pink;
             }           
+        }
+    }
+}
+
+main {
+    display: flex;
+    justify-content: center;
+    background-color: $light-grey;
+    .main__container{
+        display: flex;
+        justify-content: space-between;
+        max-width: 1140px;
+        width: 100vw;
+        padding-top: 100px;
+        padding-bottom: 100px;
+        aside {
+            display: flex;
+            flex-direction: column;
+            max-width: 285px;
+            h3 {
+                cursor: pointer;
+                margin-bottom: 10px;
+            }  
+            a {
+                color: $dark-grey;
+                margin-bottom: 10px;
+                text-decoration: none;
+            }         
+        }   
+        .section__shop {
+            display: flex;
+            max-width: 855px;
+            flex-direction: column;
+            padding-top: 0;
+            .shop__options {
+                margin-left: 30px;
+                margin-bottom: 30px;
+            }
+            .shop__products {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-between;
+                .shop__item {
+                    display: flex;
+                    flex-direction: column;
+                    width: 245px;
+                    -webkit-box-shadow: 0px 0px 5px 1px rgba(49,49,47,0.15);
+                    -moz-box-shadow: 0px 0px 5px 1px rgba(49,49,47,0.15);
+                    box-shadow: 0px 0px 5px 1px rgba(49,49,47,0.15);
+                    margin-left: 30px;
+                    margin-bottom: 30px;
+                    padding: 10px;
+                    background-color: $white;
+                    cursor: pointer;
+                    img {
+                        width: 200px;
+                        align-self: center;
+                        margin-bottom: 10px;
+                    }
+                }
+                .shop__item:hover {
+                    transform: scale(1.1);
+                }
+            }
         }
     }
 }
