--- a/styles/style.scss
+++ b/styles/style.scss
@@ -210,7 +210,7 @@ section {
     background-color: $light-grey;
     padding-top: 30px;
     padding-bottom: 30px;  
-    .section-container {
+    #section-container {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -263,6 +263,7 @@ section {
         #section-container-content {
             display: flex;
             justify-content: space-between;
+            flex-wrap: wrap;
             margin-top: 30px;
             width: 100%;
             .section-container-content-element {
@@ -330,10 +331,14 @@ footer {
             display: flex;
             flex-direction: row;
             justify-content: space-between;
+            flex-wrap: wrap;
             margin-top: 20px;
             .footer-container-info-element {
+                max-width: 285px;
+                min-width: 100px;
                 h3 {
                     text-transform: uppercase;
+                    margin-top: 10px;
                     margin-bottom: 5px;
                 }
                 ul {
@@ -355,7 +360,7 @@ footer {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    .main__container {
+    .main__container__log {
         display: flex;
         align-items: center;
         max-width: 1140px;
@@ -426,6 +431,7 @@ main {
             max-width: 855px;
             flex-direction: column;
             padding-top: 0;
+            border-left: 1px solid $dark-grey;
             .shop__options {
                 margin-left: 30px;
                 margin-bottom: 30px;
@@ -453,8 +459,105 @@ main {
                     }
                 }
                 .shop__item:hover {
-                    transform: scale(1.1);
+                    transform: scale(1.05);
+                    transition-duration: 0.4s;
                 }
+            }
+        }
+    }
+}
+
+section {
+    display: flex;
+    h1 {
+        text-align: left;
+        margin-bottom: 30px;
+    }
+    .section__container__ordered {
+        max-width: 1140px;
+        width: 100vw;
+        .ordered__item {
+           display: flex; 
+           align-items: center;
+           justify-content: space-between;
+           background-color: $white;
+           padding: 20px;
+           -webkit-box-shadow: 0px 0px 5px 1px rgba(49,49,47,0.15);
+            -moz-box-shadow: 0px 0px 5px 1px rgba(49,49,47,0.15);
+            box-shadow: 0px 0px 5px 1px rgba(49,49,47,0.15);
+            img {
+                max-height: 200px;
+            }
+        }
+        .ordered__item:hover {
+            transform: scale(1.01);
+            transition-duration: 0.2s;
+        }
+    }
+}
+
+section {
+    display: flex;
+    .section__container__products {
+        max-width: 1140px;
+        width: 100vw;
+        .products__item {
+            display: flex;
+            margin-top: 20px;
+            -webkit-box-shadow: 0px 0px 5px 1px rgba(49,49,47,0.15);
+            -moz-box-shadow: 0px 0px 5px 1px rgba(49,49,47,0.15);
+            box-shadow: 0px 0px 5px 1px rgba(49,49,47,0.15);
+            .item__content {
+                padding: 20px;
+                @include button();
+                p {
+                    margin-bottom: 10px;
+                }
+                h3 {
+                    margin-bottom: 10px;
+                }
+            }
+        }
+        h1 {
+            margin-top: 50px;
+        }
+        .products__recommended {
+            display: flex;
+            flex-wrap: wrap;
+            margin-top: 50px;
+            margin-bottom: 50px;
+            justify-content: space-between;
+            .recommended__item {
+                display: flex;
+                flex-direction: column;
+                max-width: 360px;
+                padding: 20px;
+                -webkit-box-shadow: 0px 0px 5px 1px rgba(49,49,47,0.15);
+                -moz-box-shadow: 0px 0px 5px 1px rgba(49,49,47,0.15);
+                box-shadow: 0px 0px 5px 1px rgba(49,49,47,0.15);
+                @include button();
+                button {
+                    font-size: 10px !important;
+                }
+                img {
+                    width: 200px;
+                }
+                .item__content {
+                    padding: 10px;
+                    display: flex;
+                    flex-direction: column;
+                    h1 {
+                        margin-top: 10px;
+                        margin-bottom: 10px;
+                    }
+                    h3 {
+                        margin-bottom: 10px;
+                    }
+                }
+            }
+            .recommended__item:hover {
+                transform: scale(1.01);
+                transition-duration: 0.2s;
             }
         }
     }
