--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,7 @@
 body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 header {
@@ -119,7 +120,10 @@ header #header__container .account__menu .menu__trolley img {
 
 header #header__container .account__menu .dropdown__btn {
   width: 50px;
-  cursor: pointer;
+}
+
+header #header__container .account__menu .dropdown__btn img {
+  width: 50px;
 }
 
 header #header__container .account__menu .dropdown {
@@ -136,7 +140,6 @@ header #header__container .account__menu .dropdown {
 header #header__container .account__menu .dropdown .dropdown__menu {
   position: absolute;
   right: 0;
-  top: 60px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -149,6 +152,13 @@ header #header__container .account__menu .dropdown .dropdown__menu {
   visibility: hidden;
   opacity: 0;
   border: 1px solid #31312f;
+  z-index: 1;
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+  -webkit-transition: 0.3s -webkit-transform ease-in-out;
+  transition: 0.3s -webkit-transform ease-in-out;
+  transition: 0.3s transform ease-in-out;
+  transition: 0.3s transform ease-in-out, 0.3s -webkit-transform ease-in-out;
 }
 
 header #header__container .account__menu .dropdown .dropdown__menu.active {
@@ -320,6 +330,91 @@ nav .menu-bot-element p {
   margin: 0;
   text-transform: uppercase;
   font-size: 12px;
+}
+
+.site-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 10px;
+  margin: 0;
+  border-bottom: none;
+}
+
+.site-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  top: 120px;
+  right: 0;
+  height: 79%;
+  width: 300px;
+  background-color: #fff;
+  -webkit-box-shadow: 0px 0px 5px 1px rgba(49, 49, 47, 0.15);
+  box-shadow: 0px 0px 5px 1px rgba(49, 49, 47, 0.15);
+  z-index: 1;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: 0.3s -webkit-transform ease-in-out;
+  transition: 0.3s -webkit-transform ease-in-out;
+  transition: 0.3s transform ease-in-out;
+  transition: 0.3s transform ease-in-out, 0.3s -webkit-transform ease-in-out;
+}
+
+.site-menu ul {
+  padding: 0;
+  list-style-type: none;
+  margin: 0 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-line-pack: start;
+      align-content: flex-start;
+}
+
+.site-menu li {
+  margin-top: 20px;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  height: 30px;
+}
+
+.site-menu .line {
+  border-top: 1px solid #31312f;
+  margin-bottom: 0;
+}
+
+.site-menu a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 10px;
+  text-decoration: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+  width: 100%;
+  font-weight: 700;
+  color: #31312f;
+}
+
+.site-menu a:hover {
+  color: #CD8987;
+}
+
+.site-nav-trigger:focus ~ .site-menu {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
 }
 
 section {
@@ -931,5 +1026,54 @@ section .section__container__products .products__recommended .recommended__item:
           transform: scale(1.01);
   -webkit-transition-duration: 0.2s;
           transition-duration: 0.2s;
+}
+
+@media screen and (max-width: 575px) {
+  nav {
+    display: none;
+  }
+  .site-nav {
+    visibility: visible;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .dropdown {
+    display: none !important;
+  }
+}
+
+@media screen and (min-width: 576px) and (max-width: 767px) {
+  nav {
+    visibility: hidden;
+    display: none;
+  }
+  .site-nav {
+    visibility: visible;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .dropdown {
+    display: none !important;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .site-nav {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+  .site-nav {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .site-nav {
+    display: none;
+  }
 }
 /*# sourceMappingURL=style.css.map */
