--- a/styles/style.scss
+++ b/styles/style.scss
@@ -10,6 +10,7 @@
 
 body {
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 header {
     display: flex;
@@ -64,7 +65,9 @@ header {
             }
             .dropdown__btn {
                 width: 50px;
-                cursor: pointer;
+                img {
+                    width: 50px;
+                }
             }
             .dropdown {
                 display: flex;
@@ -73,7 +76,6 @@ header {
                 .dropdown__menu {
                     position: absolute;
                     right: 0;
-                    top: 60px;
                     display: flex;
                     flex-direction: column;
                     text-align: center;
@@ -81,11 +83,14 @@ header {
                     visibility: hidden;
                     opacity: 0;
                     border: 1px solid $dark-grey;
+                    z-index: 1;
+                    transform: translateY(100%);
+                    transition: 0.3s transform ease-in-out;
                     &.active {
                         visibility: visible;
                         opacity: 1;
                         transition: all .2s ease-in-out;
-                    }
+                    }                    
                     a {
                         width: 150px;
                         padding: 10px;
@@ -94,7 +99,7 @@ header {
                         background-color: $light-grey;
                         font-weight: 700;
                     }
-                }                
+                }              
             }
             
             button{
@@ -202,6 +207,65 @@ nav {
             font-size: 12px;
         }        
     }
+}
+
+.site-nav {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 10px;
+    margin: 0;
+    border-bottom: none;
+}
+
+.site-menu {
+    display: flex;
+    position: absolute;
+    top: 120px;
+    right: 0;
+    height: 79%;
+    width: 300px;
+    background-color: $white;
+    -webkit-box-shadow: 0px 0px 5px 1px rgba(49,49,47,0.15);
+    -moz-box-shadow: 0px 0px 5px 1px rgba(49,49,47,0.15);
+    box-shadow: 0px 0px 5px 1px rgba(49,49,47,0.15);
+    z-index: 1;
+    transform: translateX(100%);
+    transition: 0.3s transform ease-in-out;
+    ul {
+        padding: 0;
+        list-style-type: none;
+        margin: 0 10px;
+        display: flex;
+        flex-wrap: wrap;
+        align-content: flex-start;
+    }
+    li {
+        margin-top: 20px;        
+        flex-basis: 100%;
+        height: 30px;
+    }
+    .line {
+        border-top: 1px solid $dark-grey;
+        margin-bottom: 0;
+    }
+    a {
+        display: flex;
+        padding: 10px;
+        text-decoration: none;
+        align-items: center;
+        height: 100%;
+        width: 100%;
+        font-weight: 700;
+        color: $dark-grey;
+    }
+    a:hover {
+        color: $pink;
+    }
+}
+
+.site-nav-trigger:focus ~ .site-menu {
+    transform: translateX(0);
 }
 
 section {
@@ -561,4 +625,53 @@ section {
             }
         }
     }
+}
+
+
+// RESPONSYWNOŚĆ
+
+@media screen and (max-width: 575px) {
+    nav{
+        display: none;
+    }
+    .site-nav {
+        visibility: visible;
+        display: flex;
+    }
+    .dropdown {
+        display: none !important;
+    }
+}
+
+@media screen and (min-width: 576px) and (max-width: 767px){
+    nav{
+        visibility: hidden;
+        display: none;
+    }
+    .site-nav {
+        visibility: visible;
+        display: flex;
+    }
+    .dropdown {
+        display: none !important;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+    .site-nav {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 992px) and (max-width: 1199px){
+    .site-nav {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .site-nav {
+        display: none;
+    }
+
 }
