--- a/styles/style.scss
+++ b/styles/style.scss
@@ -143,7 +143,7 @@ nav {
                 }
                 .dropdown__menu {
                     display: flex;
-                    visibility: hidde;
+                    visibility: hidden;
                     opacity: 0;
                     text-align: left;
                     position: absolute;
@@ -258,9 +258,6 @@ nav {
         width: 100%;
         font-weight: 700;
         color: $dark-grey;
-    }
-    a:hover {
-        color: $pink;
     }
 }
 
@@ -495,7 +492,6 @@ main {
             max-width: 855px;
             flex-direction: column;
             padding-top: 0;
-            border-left: 1px solid $dark-grey;
             .shop__options {
                 margin-left: 30px;
                 margin-bottom: 30px;
@@ -634,12 +630,53 @@ section {
     nav{
         display: none;
     }
+    .btn_log {
+        display: none;
+    }
     .site-nav {
         visibility: visible;
         display: flex;
     }
     .dropdown {
         display: none !important;
+    }
+    section #section-container{
+        align-items: flex-start;
+        .slider__container {
+            width: 100%;
+        }
+    }
+    section #section-container #section-container-content {
+        justify-content: center;        
+        .section-container-content-element {
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
+    }
+    footer #footer-container {
+        align-items: center;
+        text-align: center;
+    }
+    footer #footer-container #footer-container-info {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    section .section__container__products {
+        .products__item {
+            flex-direction: column;
+            align-items: center;
+            img {
+                max-width: 300px;
+            }
+        } 
+        h1 {
+            text-align: center;
+        }
+        .products__recommended {
+            justify-content: center;
+        }
     }
 }
 
@@ -648,6 +685,9 @@ section {
         visibility: hidden;
         display: none;
     }
+    .btn_log {
+        display: none;
+    }
     .site-nav {
         visibility: visible;
         display: flex;
@@ -655,11 +695,46 @@ section {
     .dropdown {
         display: none !important;
     }
+    section #section-container{
+        align-items: flex-start;
+        .slider__container {
+            width: 100%;
+        }
+    }
+    section #section-container #section-container-content {
+        justify-content: center;        
+        .section-container-content-element {
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
+    }
+    footer #footer-container {
+        align-items: center;
+        text-align: center;
+    }
+    footer #footer-container #footer-container-info {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
     .site-nav {
         display: none;
+    }    
+    section #section-container{
+        align-items: flex-start;
+        .slider__container {
+            width: 100%;
+        }
+    }
+    section #section-container #section-container-content {
+        justify-content: center;        
+        .section-container-content-element {
+            margin: 10px;
+        }
     }
 }
 
@@ -667,11 +742,29 @@ section {
     .site-nav {
         display: none;
     }
+    section #section-container{
+        align-items: flex-start;
+        .slider__container {
+            width: 100%;
+        }
+    }
+    section #section-container #section-container-content {
+        justify-content: center;        
+        .section-container-content-element {
+            margin: 10px;
+        }
+    }
 }
 
 @media screen and (min-width: 1200px) {
     .site-nav {
         display: none;
+    }
+    section #section-container{
+        align-items: flex-start;
+        .slider__container {
+            width: 100%;
+        }
     }
 
 }
