--- a/styles/style.css
+++ b/styles/style.css
@@ -788,10 +788,14 @@ main .main__container .section__shop {
   display: -ms-flexbox;
   display: flex;
   max-width: 855px;
+  width: 100%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   padding-top: 0;
 }
 
@@ -835,6 +839,10 @@ main .main__container .section__shop .shop__products .shop__item img {
       -ms-grid-row-align: center;
       align-self: center;
   margin-bottom: 10px;
+}
+
+main .main__container .section__shop .shop__products .shop__item p {
+  justify-self: flex-end;
 }
 
 main .main__container .section__shop .shop__products .shop__item:hover {
