--- a/styles/style.scss
+++ b/styles/style.scss
@@ -490,7 +490,9 @@ main {
         .section__shop {
             display: flex;
             max-width: 855px;
+            width: 100%;
             flex-direction: column;
+            justify-content: flex-start;
             padding-top: 0;
             .shop__options {
                 margin-left: 30px;
@@ -514,8 +516,12 @@ main {
                     cursor: pointer;
                     img {
                         width: 200px;
+                        
                         align-self: center;
                         margin-bottom: 10px;
+                    }
+                    p {
+                        justify-self: flex-end;
                     }
                 }
                 .shop__item:hover {
