--- a/styles/style.scss
+++ b/styles/style.scss
@@ -540,19 +540,34 @@ section {
         margin-bottom: 30px;
     }
     .section__container__ordered {
+        display: flex;
+        flex-direction: column;
         max-width: 1140px;
         width: 100vw;
+        @include button();        
         .ordered__item {
            display: flex; 
            align-items: center;
            justify-content: space-between;
            background-color: $white;
            padding: 20px;
+           margin-bottom: 20px;
            -webkit-box-shadow: 0px 0px 5px 1px rgba(49,49,47,0.15);
             -moz-box-shadow: 0px 0px 5px 1px rgba(49,49,47,0.15);
             box-shadow: 0px 0px 5px 1px rgba(49,49,47,0.15);
             img {
                 max-height: 200px;
+            }
+            .item__content {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-end;
+                h2 {
+                    margin-bottom: 10px;
+                }
+                p {
+                    margin-bottom: 10px;
+                }
             }
         }
         .ordered__item:hover {
@@ -684,6 +699,9 @@ section {
             justify-content: center;
         }
     }
+    .container__left {
+        display: none;
+    }
 }
 
 @media screen and (min-width: 576px) and (max-width: 767px){
@@ -723,6 +741,9 @@ section {
         justify-content: center;
         align-items: center;
         text-align: center;
+    }
+    .container__left {
+        display: none;
     }
 }
 
