--- a/styles/style.css
+++ b/styles/style.css
@@ -173,6 +173,7 @@ header #header__container .account__menu .dropdown {
 header #header__container .account__menu .dropdown .dropdown__menu {
   position: absolute;
   right: 0;
+  top: -50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1144,6 +1145,13 @@ main .aside__admin {
 main .section__admin {
   max-width: 855px;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 main .section__admin #section-container {
@@ -1157,6 +1165,32 @@ main .section__admin #section-container {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  width: 100%;
+}
+
+main .section__admin #section-container .message__admin {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+main .section__admin #section-container .message__admin form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+main .section__admin #section-container p {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 main .section__admin .container__element {
@@ -1201,6 +1235,102 @@ main .section__admin .container__element form {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+
+main .section__admin .messages__admin {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+
+main .section__admin .messages__admin p {
+  width: 200px;
+}
+
+.container__email {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  padding: 20px;
+  background-color: #fff;
+  -webkit-box-shadow: 0px 0px 5px 1px rgba(49, 49, 47, 0.15);
+  box-shadow: 0px 0px 5px 1px rgba(49, 49, 47, 0.15);
+}
+
+.container__email input {
+  height: 35px;
+  border: 0;
+  border-bottom: 1px solid #31312f;
+  margin-bottom: 10px;
+}
+
+.container__email .email__btn {
+  margin-top: 10px;
+  background: transparent;
+  color: #31312f;
+  border: 1px solid #31312f;
+  padding: 10px;
+  border-radius: 5px;
+  text-transform: uppercase;
+  font-weight: 900;
+  -webkit-transition-duration: 0.4s;
+          transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.container__email .email__btn:hover {
+  background: #CD8987;
+  border: 1px solid #CD8987;
+  color: #fff;
+}
+
+#section-container button {
+  background: transparent;
+  color: #31312f;
+  border: 1px solid #31312f;
+  padding: 10px;
+  border-radius: 5px;
+  text-transform: uppercase;
+  font-weight: 900;
+  -webkit-transition-duration: 0.4s;
+          transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+#section-container button:hover {
+  background: #CD8987;
+  border: 1px solid #CD8987;
+  color: #fff;
+}
+
+#section-container a {
+  text-decoration: none;
+  color: #31312f;
+}
+
+#section-container .container__message {
+  margin-top: 20px;
+  background-color: #fff;
+  padding: 20px;
+  -webkit-box-shadow: 0px 0px 5px 1px rgba(49, 49, 47, 0.15);
+  box-shadow: 0px 0px 5px 1px rgba(49, 49, 47, 0.15);
+}
+
+#section-container .container__message .message__user {
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #31312f;
 }
 
 @media screen and (max-width: 575px) {
